coded graph of skills

--- a/resume.qmd
+++ b/resume.qmd
@@ -1,57 +1,254 @@
 ---
 page-layout: custom
-execute:
-  echo: false
-  output: false
+toc: false
 ---
+<!-- Image banner at top -->
+<img src="images/leaves2-dark.png" class="custom-banner"/>  
 
-<!-- create custom layout for page -->
+<!-- create custom layout for banner elements -->
 ::::: {.grid}
+<!-- left side -->
+::: {.g-col-12 .g-col-md-6}
+::: {.teal-bg-left}
+<p class="custom-h1-light">Resume</p>
+<p class="custom-h2-light" style="font-size: 22px; font-weight: 200; padding-left: 40px; padding-right: 40px">Updated September 2023</p>
+:::
+<br></br>
+:::
+:::::
 
-
+::::: {.grid}
 <!-- left pad -->
-::: {.g-col-2}
+::: {.g-col-1 .g-col-md-2}
 :::
 
 
 <!-- middle content -->
-:::: {.g-col-8}
-<p class="custom-h2-dark" id="summary" style="margin-left: 18px">Summary</p>
-<ul class="custom-list">
-  <li>3 years of scientific programming experience in R; 1 year of experience in Python; experience in SQL.</li>
-  <li>Practical experience in data preparation, data visualization, descriptive statistics, and geospatial analysis in R.</li>
-  <li>Academic experience in inferential statistics, machine learning, and environmental modeling.</li>
-  <li>Efficiently work within collaborative teams; equally at ease working independently; strong communication.</li>
-  <li>Passion for investigating and applying technical solutions to social and environmental challenges.</li>
-</ul>
+:::: {.g-col-10 .g-col-md-8}
+
+<div class="button-container">
+  <a href="images/Windschitl_Elke_Resume.pdf" class="light-teal-button" style="margin-top: 15px">View/Download Resume PDF</a> 
+</div>
+:::{.teal-bg}
+
+```{r echo=FALSE,message=FALSE, warning=FALSE}
+library(tibble)
+library(ggplot2)
+library(dplyr)
+library(ggiraph)
+library(showtext)
+
+font_add_google("Montserrat", "montserrat")
+showtext_auto()
+
+my_color <- "#F8F8F8"
+
+
+skills_dat <- tribble(
+  ~skill, ~level, ~tooltip,
+  "R", 5, "3 years of experience, fluent in tidyverse,\ntidymodels, sf, terra, raster, Shiny.",
+  "Python", 3, "1 year of experience, familiar with\nnumpy, pandas, matplotlib.",
+  "SQL", 3, "Academic experience creating\nschemas and writing queries.", 
+  "Bash", 1, "Knowledge of basic bash commands.",
+  "Microsoft Office", 5, "10 years of experience using\nPowerPoint, Excel, Word",
+  "Git/GitHub", 4, "1 year of experience with\ncreating repositories, forking, cloning, pushing,\npulling, branches, trouble-shooting merge conflicts,\npull requests, issues, projects.",
+  "GEE", 3, "Academic experience retrieving,\nselecting/filtering, and visualizing GEE data.",
+  "ArcGIS Pro", 2, "Online coursework experience in loading,\nprepping, visualizing spatial data.\nFamiliar with attribute tables, geoprocessing\ntools, charts, symbology.",
+  "Tableau", 1, "Knowledge of loading data in\nTableau, conceptual familiarity with\n Tableau's strengths."
+) %>%
+  mutate(level = level + 2) %>% 
+  arrange(desc(level))
+
+skills_plot <- skills_dat %>% 
+  ggplot() +
+  geom_segment(aes(x = reorder(skill, level), 
+                   xend = skill, 
+                   y = level,
+                   yend = 0),
+               color = my_color,
+               size = 1) +
+  geom_point_interactive(aes(x = reorder(skill, level),
+                  y = level,
+                  tooltip = tooltip),
+              color = my_color,
+              size = 4, 
+              position = position_dodge(width = 0.5)) +
+  labs(x = "",
+       y = "",
+       title = "") +
+  theme_minimal(base_family = "montserrat") + # Use the correct font family name
+  scale_y_continuous(limits = c(0, 7),
+                   breaks = c(3, 5, 7),
+                   labels = c("Learning!", "Competent", "Proficient")) +
+  coord_flip() +
+  theme(panel.background = element_rect(fill = "#243235", color = "#243235"),  # Set both fill and color to black
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_blank(),  # Remove axis lines
+        axis.ticks = element_blank(),  # Remove axis ticks
+        axis.text.y = element_text(size = 12, color = my_color, vjust = 0.3, hjust = 1, angle = 0),  # White text
+        axis.text.x = element_text(size = 12, color = my_color, vjust = 0, hjust = 0.7),  # Adjust vjust for x-axis text
+        plot.title = element_text(size = 12, color = my_color),  # White title
+        plot.background = element_rect(fill = "#243235", color = "#243235"),
+        legend.position = "none") +
+    theme(plot.margin = margin(0, 0, 0, 0))  # Remove plot margin
+
+girafe(ggobj = skills_plot,
+       width_svg = 8,
+       height_svg = 4,
+       options = list(opts_tooltip(css = "font-family: montserrat; color: #68b0ac; background: #F8F8F8")))
+
+
+
+```
+:::
 
 ::: {.teal-bg}
-<p class="custom-h2-light" id="edu">Education</p>
-::: {.grid}
-::: {.g-col-6}
 ::: {.gray-bg}
-<p class="custom-p-dark" style="padding-bottom: 0;"><strong>Master of Environmental Data Science </strong></p>
-<p class="custom-p-dark" style="padding-bottom: 0; padding-top: 0">Bren School of Environmental Science & Management --- University of California, Santa Barbara, 3.97 GPA (6/23)</p>
-<ul class="custom-list">
-  <li><u>Leadership:</u> Dean's Advisory Council Representative, Master's Curriculum Committee Representative</li>
-  <li><u>Highlighted Coursework:</u> Geospatial Analysis and Remote Sensing, Modeling Environmental Systems, Statistics for Environmental Data Science, Machine Learning in Environmental Science, Data Visualization and Communication, Ethics and Bias in Environmental Data Science, Team Science, Intro to R Shiny</li>
-</ul>
+
+<p class="custom-h2-dark" id="summary">Summary</p>
+
+- 3 years of scientific programming experience in R; 1 year of experience in Python; experience in SQL.
+- Practical experience in data preparation, data visualization, descriptive statistics, and geospatial analysis in R.
+- Academic experience in inferential statistics, machine learning, and environmental modeling.
+- Efficiently work within collaborative teams; equally at ease working independently; strong communication.
+- Passion for investigating and applying technical solutions to social and environmental challenges.
+
+:::
+
+::: {.gray-bg}
+
+<p class="custom-h2-dark" id="education">Education</p>
+
+**Master of Environmental Data Science**, 3.97 GPA (6/23)<br>
+**Bren School of Environmental Science & Management --- University of California, Santa Barbara (UCSB)**<br>
+
+- **Leadership:** Dean's Advisory Council Representative, Master's Curriculum Committee Representative
+- **Highlighted Coursework:** Geospatial Analysis and Remote Sensing, Modeling Environmental Systems, Statistics for Environmental Data Science, Machine Learning in Environmental Science, Data Visualization and Communication, Ethics and Bias in Environmental Data Science, Team Science, Intro to R Shiny
+
+<br>
+ 
+**Bachelor of Science in Biology with Honors**, 4.00 GPA (5/20)<br>
+**College of Agriculture and Life Sciences --- Iowa State University (ISU)**<br>
+
+- **Involvement:** National Student Exchange Program (University of Hawai'i at Hilo, Fall 2018; California State University, Monterey Bay, Spring 2020), Cultural Ambassador (Fall 2020), Women in Science and Engineering Student Role Model (Spring 2018, Spring 2019, Fall 2020)
+- **Highlighted Coursework:** Introduction to Renewable Resources, Field Ecology in Montana, Environmental Ethics, Natural Resource Management under the North American Model of Conservation, Comparative Chordate Anatomy, Fundamentals of Public Speaking, Written Oral Visual and Electronic Composition
+
+:::
+
+:::{.gray-bg}
+<p class="custom-h2-dark" id="projs">Data Science Projects</p>
+
+**Designing an Interactive Web Application for Decision Research**, (8/23–present)<br>
+**Role:** Application programmer | **Client:** Judgement, Decision, & Social Comparison Lab<br>
+
+-	Developing an interactive web application with Shiny in R as a prototype to assist the Judgement, Decision, & Social Comparison Lab in securing grant funding for studying sequential and visual decision-making.
+-	Creating data visualizations with ggplot2 and ggiraph in line with the principal investigator’s design vision.
+-	Providing insights on important design principles such as color-blind friendly palettes, lie factors, and apparent magnitude Flannery scaling for achieving effective and fair visualizations for decision-making.
+-	Planning and executing moderated usability testing to assess the efficacy of the application’s user interface.
+
+ <br>
+ 
+**Master’s Capstone: Developing a Data Pipeline for Kelp Forest Modeling**, (1/23–6/23) <br>
+**Role:** Spatial modeling, project management | **Clients:** Ocean Rainforest Inc., UCSB <br>
+
+-	Aligned spatiotemporal resolution of 13 spatial data sets in R with terra, raster, & sf, to create a synthesized dataset containing oceanographic factors and metrics of giant kelp distribution as a deliverable for clients.
+-	Performed maximum entropy species distribution modeling in R with ENMeval to estimate where on the Santa Barbara coastline has the highest predicted habitat suitability for kelp cultivation and restoration.
+-	Created visualizations in R with gpplot2, Leaflet, & tmap to communicate the spatial distribution of kelp, temperature, depth, and nutrients in the Santa Barbara Channel as well as identify data gaps.
+-	Managed project deadlines, deliverables, and communication with Zoom, Slack, Docs, and GitHub Projects.
+
+ <br>
+ 
+**Statistics Course Project: Identifying Key Traits in Hawaiian Fish that Predict Risk of Extinction**, (10/22–12/22)<br>
+
+-	Planned and executed a study using existing data to answer questions about fish extinction vulnerability.
+-	Retrieved, filtered, and joined large data tables from FishBase and the International Union for Conservation of Nature (IUCN) Red List application programming interface (API) in R with dplyr, rfishbase, and rredlist.
+-	Leveraged stats to run a series of logistic regression models to investigate the probability of a species being listed as threatened on the IUCN Red List based on characteristics such as endemism or length.
+-	Communicated study results by creating ggplot2 visualizations and writing an online Quarto report.
+
+:::
+:::{.gray-bg}
+<p class="custom-h2-dark" id="exp">Professional Research Experience</p>
+
+**Batten Research Fellow**, (7/21–9/21)<br>
+**Virginia Aquarium & Marine Science Center**, Virginia Beach, VA<br>
+
+- Integrated the use of ZooMonitor — a digital animal behavior monitoring tool — at the aquarium by developing workflows and creating training materials for teaching other staff to use ZooMonitor.
+- Collaborated with animal care staff to develop and execute a scientific experimental design to better understand how target animals’ behavior changed based on time of day, location, guest count, etc.
+- Collected and analyzed behavior data of 2 seals and 1 crow using ZooMonitor software and R.
+- Presented research results to ~50 aquarium staff via a 45-minute Zoom PowerPoint presentation to inform science-based animal care procedure changes at the aquarium.
+
+ <br>
+ 
+**Research Assistant**, (1/19–12/19, 7/20–8/20)<br>
+**Iowa State University Janke Lab** (in collaboration with the Iowa Department of Natural Resources), Ames, IA<br>
+
+- Processed, analyzed, and visualized extensive quail audio data using R, Raven Pro, Excel, and PowerPoint.
+- Developed 3 research questions and methods of investigation for assessing the use of autonomous recording units to study Northern bobwhite quail and support the National Bobwhite Conservation Initiative.
+- Presented a research poster at the National Conference on Undergraduate Research detailing how ARUs can be used by the Iowa DNR to monitor occupancy of quail in place of labor-intensive point count surveys.
+- Followed detailed instructions to assist with miscellaneous lab and field tasks to help other lab members such as drying and weighing prairie grass biomass samples, assisting with line transect surveys, etc.
+
+ <br>
+ 
+**Animal Behavior Research Intern**, (6/19–8/19)<br>
+**Saint Louis Zoo**, Saint Louis, MO<br>
+
+- Conducted daily live animal behavior observations of bears and primates with a defined ethogram as part of an 8-person team to inform future science-based animal care decisions at the zoo.
+- Collected viper behavior data by conducting independent video observations using Observer XT to contribute to a study investigating whether viper tongue flicks are an indicator of stress.
+- Coded mother-infant antelope behavior data by conducting independent video observations using Observer XT to contribute to a 30+ year study to help inform future care of mother-infant pairs.
+
+:::
+::: {.gray-bg}
+<p class="custom-h2-dark" id="addexp">Additional Experience</p>
+
+**Environmental Education Creative Collaborator**, (6/18–present)<br>
+**The LENA Project**, Iowa City, IA<br>
+Create digital content and marketing materials to communicate the organization’s mission and projects via graphic design and illustration using Canva, Adobe Photoshop, and Procreate as contract and volunteer work; brainstorm project ideas; archive work and metadata from previous projects.
+
+<br>
+
+**Cashier**, (1/22–7/22)<br>
+**Whole Foods**, Seattle, WA<br>
+Provided excellent customer service and communication while cashiering, bagging, and monitoring self-checkout machines; trained 8 new team members on standard operating procedures in the customer service department.
+
+:::
+::: {.gray-bg}
+<p class="custom-h2-dark" id="skills">Skills & Certifications</p>
+
+**Programming Languages:** R (proficient); Python, SQL (competent); Bash (beginner)<br>
+**Additional Digital Literacy:** GitHub, Git, Microsoft 365 (proficient); Google Earth Engine, ArcGIS (competent)<br>
+**Certifications:** Fundamentals of GIS; GIS Data Formats, Design, and Quality, University of California, Davis (3/21)
 
 :::
 :::
-::: {.g-col-6}
-:::{.gray-bg}
-### ISU
-:::
-:::
-:::
-:::
+
+
+
 ::::
 
 <!-- right pad -->
-::: {.g-col-2}
+::: {.g-col-1 .g-col-md-2}
+<ul class="menu">
+<p class="custom-p-light" style="font-size: 20px; font-weight: 400;">On This Page:</p>
+<li><a href="#summary">Summary</a></li>
+<li><a href="#edu">Education</a></li>
+<li><a href="#projs">Data Projects</a></li>
+<li><a href="#exp">Research Exp.</a></li>
+<li><a href="#addexp">Additional Exp.</a></li>
+<li><a href="#skills">Skills & Certs</a></li>
+</ul>
 :::
 
 
 :::::
 <br></br>
+
+```{ojs style="display: none;"}
+//| echo: false
+//| output: false
+// Your JavaScript code goes here
+setTimeout(function() {
+  document.querySelector('.teal-bg-left').classList.add('slide-in');
+}, 300); // Adjust the delay (in milliseconds) as needed
+
+```
