--- a/resume.qmd
+++ b/resume.qmd
@@ -3,7 +3,7 @@ page-layout: custom
 toc: false
 ---
 <!-- Image banner at top -->
-<img src="images/leaves2-dark.png" class="custom-banner"/>  
+<img src="images/leaves2-dark.png" class="custom-banner" alt="Large green leaves."/>  
 
 <!-- create custom layout for banner elements -->
 ::::: {.grid}
@@ -29,8 +29,23 @@ toc: false
 <div class="button-container">
   <a href="images/Windschitl_Elke_Resume.pdf" class="light-teal-button" style="margin-top: 15px">View/Download Resume PDF</a> 
 </div>
-:::{.teal-bg}
 
+::: {.teal-bg}
+::: {.gray-bg}
+
+<p class="custom-h2-dark" id="summary">Summary</p>
+
+- 3 years of experience in R; 1 year of experience in Python; experience in SQL.
+- Practical experience in data cleaning and preparation, data visualization, descriptive statistics, geospatial analysis, and Shiny in R.
+- Academic experience in inferential statistics, machine learning, environmental modeling, remote sensing, and Google Earth Engine.
+- Efficiently work within collaborative teams; equally at ease working independently.
+- Passion for investigating and applying technical solutions to environmental challenges.
+
+:::
+:::
+
+:::{.teal-bg}
+<p class="custom-h2-light" id="skills">Skills</p>
 ```{r echo=FALSE,message=FALSE, warning=FALSE}
 library(tibble)
 library(ggplot2)
@@ -42,19 +57,20 @@ font_add_google("Montserrat", "montserrat")
 showtext_auto()
 
 my_color <- "#F8F8F8"
+my_background <- "#243235"
 
 
 skills_dat <- tribble(
   ~skill, ~level, ~tooltip,
-  "R", 5, "3 years of experience, fluent in tidyverse,\ntidymodels, sf, terra, raster, Shiny.",
-  "Python", 3, "1 year of experience, familiar with\nnumpy, pandas, matplotlib.",
+  "R", 5, "3 years of experience. Fluent\nin tidyverse, tidymodels, sf, terra,\nraster, Shiny, etc.",
+  "Python", 3, "1 year of experience with\nnumpy, pandas, matplotlib.",
   "SQL", 3, "Academic experience creating\nschemas and writing queries.", 
   "Bash", 1, "Knowledge of basic bash commands.",
   "Microsoft Office", 5, "10 years of experience using\nPowerPoint, Excel, Word",
-  "Git/GitHub", 4, "1 year of experience with\ncreating repositories, forking, cloning, pushing,\npulling, branches, trouble-shooting merge conflicts,\npull requests, issues, projects.",
-  "GEE", 3, "Academic experience retrieving,\nselecting/filtering, and visualizing GEE data.",
-  "ArcGIS Pro", 2, "Online coursework experience in loading,\nprepping, visualizing spatial data.\nFamiliar with attribute tables, geoprocessing\ntools, charts, symbology.",
-  "Tableau", 1, "Knowledge of loading data in\nTableau, conceptual familiarity with\n Tableau's strengths."
+  "Git/GitHub", 4, "1 year of experience with creating\nrepositories, forking, cloning, pushing,\npulling, branches, pull requests, issues, projects,\nand trouble-shooting merge conflicts.",
+  "GEE", 3, "Academic experience retrieving,\nselecting/filtering, and visualizing\nGEE data.",
+  "ArcGIS Pro", 2, "Coursera and Esri coursework experience in\nloading, prepping, visualizing spatial data.\nFamiliar with attribute tables, geoprocessing\ntools, charts, symbology. Currently enrolled\nin Esri's Spatial Data Science MOOC.",
+  "Tableau", 1, "Knowledge of loading data in\nTableau. Conceptual familiarity with\n Tableau's strengths."
 ) %>%
   mutate(level = level + 2) %>% 
   arrange(desc(level))
@@ -77,26 +93,26 @@ skills_plot <- skills_dat %>%
        y = "",
        title = "") +
   theme_minimal(base_family = "montserrat") + # Use the correct font family name
-  scale_y_continuous(limits = c(0, 7),
+  scale_y_continuous(limits = c(0, 8),
                    breaks = c(3, 5, 7),
                    labels = c("Learning!", "Competent", "Proficient")) +
   coord_flip() +
-  theme(panel.background = element_rect(fill = "#243235", color = "#243235"),  # Set both fill and color to black
+  theme(panel.background = element_rect(fill = my_background, color = my_background),  # Set both fill and color to black
         panel.grid.major = element_blank(),
         panel.grid.minor = element_blank(),
         axis.line = element_blank(),  # Remove axis lines
         axis.ticks = element_blank(),  # Remove axis ticks
         axis.text.y = element_text(size = 12, color = my_color, vjust = 0.3, hjust = 1, angle = 0),  # White text
-        axis.text.x = element_text(size = 12, color = my_color, vjust = 0, hjust = 0.7),  # Adjust vjust for x-axis text
+        axis.text.x = element_text(size = 12, color = my_color, vjust = 0, hjust = 0.5),  # Adjust vjust for x-axis text
         plot.title = element_text(size = 12, color = my_color),  # White title
-        plot.background = element_rect(fill = "#243235", color = "#243235"),
+        plot.background = element_rect(fill = my_background, color = my_background),
         legend.position = "none") +
     theme(plot.margin = margin(0, 0, 0, 0))  # Remove plot margin
 
 girafe(ggobj = skills_plot,
        width_svg = 8,
        height_svg = 4,
-       options = list(opts_tooltip(css = "font-family: montserrat; color: #68b0ac; background: #F8F8F8")))
+       options = list(opts_tooltip(css = "font-family: montserrat; color: #68b0ac; background: #F8F8F8; border-color: #68b0ac; border-width: 2px; border-style: solid; border-radius: 5px")))
 
 
 
@@ -106,19 +122,7 @@ girafe(ggobj = skills_plot,
 ::: {.teal-bg}
 ::: {.gray-bg}
 
-<p class="custom-h2-dark" id="summary">Summary</p>
-
-- 3 years of scientific programming experience in R; 1 year of experience in Python; experience in SQL.
-- Practical experience in data preparation, data visualization, descriptive statistics, and geospatial analysis in R.
-- Academic experience in inferential statistics, machine learning, and environmental modeling.
-- Efficiently work within collaborative teams; equally at ease working independently; strong communication.
-- Passion for investigating and applying technical solutions to social and environmental challenges.
-
-:::
-
-::: {.gray-bg}
-
-<p class="custom-h2-dark" id="education">Education</p>
+<p class="custom-h2-dark" id="edu">Education</p>
 
 **Master of Environmental Data Science**, 3.97 GPA (6/23)<br>
 **Bren School of Environmental Science & Management --- University of California, Santa Barbara (UCSB)**<br>
@@ -212,14 +216,6 @@ Create digital content and marketing materials to communicate the organizationâ€
 Provided excellent customer service and communication while cashiering, bagging, and monitoring self-checkout machines; trained 8 new team members on standard operating procedures in the customer service department.
 
 :::
-::: {.gray-bg}
-<p class="custom-h2-dark" id="skills">Skills & Certifications</p>
-
-**Programming Languages:** R (proficient); Python, SQL (competent); Bash (beginner)<br>
-**Additional Digital Literacy:** GitHub, Git, Microsoft 365 (proficient); Google Earth Engine, ArcGIS (competent)<br>
-**Certifications:** Fundamentals of GIS; GIS Data Formats, Design, and Quality, University of California, Davis (3/21)
-
-:::
 :::
 
 
@@ -231,11 +227,11 @@ Provided excellent customer service and communication while cashiering, bagging,
 <ul class="menu">
 <p class="custom-p-light" style="font-size: 20px; font-weight: 400;">On This Page:</p>
 <li><a href="#summary">Summary</a></li>
+<li><a href="#skills">Skills</a></li>
 <li><a href="#edu">Education</a></li>
 <li><a href="#projs">Data Projects</a></li>
 <li><a href="#exp">Research Exp.</a></li>
 <li><a href="#addexp">Additional Exp.</a></li>
-<li><a href="#skills">Skills & Certs</a></li>
 </ul>
 :::
 
