--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,7 @@ execute:
 
 <!-- create custom layout for banner elements -->
 ::::: {.grid}
+
 <!-- left side -->
 ::: {.g-col-12 .g-col-md-6}
 ::: {.teal-bg-left}
@@ -25,13 +26,11 @@ execute:
 :::
 :::
 :::::
-
 <!-- Modal -->
 <div id="imageModal" class="modal">
   <span id="closeModal" class="close">×</span>
   <img id="modalImage" class="modal-content" alt="Enlarged Image">
 </div>
-
 <!-- create custom layout for page -->
 ::::: {.grid}
 <!-- left pad -->
@@ -39,13 +38,12 @@ execute:
 :::
 <!-- middle content -->
 ::: {.g-col-8}
-<!-- ![](images/circle-headshot.png){width="280"}-->
 <p class="custom-h2-light" style="color: gray; text-align: center;">![](images/Hand.png){width="24"} Welcome!</p>
 
 <p class="custom-p-light" style="color: gray"> A little bit about me: I recently earned a Master of Environmental Data Science degree from the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) at the University of California, Santa Barbara. I am passionate about conservation, and I hope to build a career using data science tools to solve environmental problems. Learn more and read my full bio on my [About Me page](https://elkewind.github.io/about.html).</p>
 
+<!-- subgrid -->
 ::: {.grid}
-
 ::: {.g-col-12 .g-col-md-7}
 ::: {.teal-bg}
 <p class="custom-h2-light" style="text-align: center;">![](images/Book.png){width="32"} Education</p>
@@ -64,10 +62,8 @@ execute:
   <a href="https://www.linkedin.com/in/elke-windschitl/" class="light-teal-button">LinkedIn</a>
 </div>
 :::
-  
 ::: {.g-col-12 .g-col-md-5}
 ::: {.teal-bg}
-
 <p class="custom-h2-light" style="text-align: center;">![](images/magnifying-glass.png){width="32"} My Interests</p>
 
 <p class="custom-p-light" style="font-size: 20px;">Spatial Data Science \| Data Visualization</p>
@@ -83,12 +79,9 @@ execute:
 <!-- right pad -->
 ::: {.g-col-2}
 :::
-
 <br></br> 
 <!-- end custom layout for page -->
 :::::
-
-
 <!-- Image footer at bottom -->
 :::{.footer-container}
 <img src="images/footer.png" class="custom-footer" alt="A banner showing mountains, trees, waves."/> 
@@ -96,7 +89,6 @@ execute:
 ```{ojs style="display: none;"}
 //| echo: false
 //| output: false
-// Your JavaScript code goes here
 setTimeout(function() {
   document.querySelector('.teal-bg-left').classList.add('slide-in');
   document.querySelector('.teal-bg-right').classList.add('slide-in');
@@ -110,7 +102,7 @@ modal = {
 
 // Function to open the modal (only for desktop)
 image.onclick = function () {
-  if (window.innerWidth >= 768) { // Check if the screen width is greater than or equal to 768px (adjust this breakpoint as needed)
+  if (window.innerWidth >= 768) { // Check if the screen width is greater than or equal to 768px
     modal.style.display = "block";
     modalImage.src = this.src; // Set the source of the enlarged image
   }
@@ -127,6 +119,4 @@ window.onclick = function (event) {
   }
 };
 }
-
-
 ```
